package arstudio_protobuf;

message Vector3D
{
  required float x = 1;
  required float y = 2;
  required float z = 3;
}

message Color
{
  required int32 r = 1;
  required int32 g = 2;
  required int32 b = 3;
}

message Item
{
  extensions 100 to max;
}

message Bitmap
{
  extend Item
  {
    required Bitmap bitmap = 100;
  }
  required bytes data = 1;
}

message Camera
{
  extend Item
  {
    required Camera camera = 101;
  }
  required Vector3D rotation = 1;
  required Vector3D position = 2;
}

message Point
{
  extend Item
  {
    required Point point = 102;
  }
  required Vector3D position = 1;
  required Color color = 2;
}

message PointCloud
{
  extend Item
  {
    required PointCloud point_cloud = 103;
  }
  repeated Vector3D points = 1;
  repeated Color colors = 2;
}

message Node
{
  enum Type
  {
    Invalid = 0;
    Bitmap = 1;
    Camera = 2;
    Point = 3;
    PointCloud = 4;
  }
  required Type type = 1;
  required string name = 2;
  repeated Item items = 3;
}

message Repository
{
  repeated Node nodes = 1;
}
